<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">SunshineApp</string>
    <string name="btn_search">Ver clima</string>
    <string name="tvCity">Ingrese Ciudad</string>

    <string name="day_forecast_for_intent_key">dayForecastItem</string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_changeCity">Search</string>
    <string name="btn_pronostico">Pronóstico</string>
    <string name="default_error_message">Oops! There was an error</string>


    <!-- Shared Preferences Variables Names -->
    <string name="saved_location_name">location_name</string>
    <string name="saved_location_lat" >location_lat</string>
    <string name="saved_location_lon" >location_lon</string>
    <string name="saved_location_status">location_status</string>

    <!-- Shared Preferences Default Values -->
    <string name="saved_location_default_lat_value">-4593538729585983816</string>
    <string name="saved_location_default_lon_value">-4589639415047167046</string>
    <string name="saved_location_default_name_value">Rosario</string>
    <string name="not_supported_error">Device not supported</string>
    <string name="data_placeholder">No Data</string>
    <string name="lbl_rain_probability">Rain Probability:</string>
    <string name="lbl_clouds">Clouds:</string>
    <string name="lbl_humidity">Humidity:</string>
    <string name="lbl_pressure">Pressure:</string>


</resources>
